# spindown

./: Dockerfile  TUTORIAL.md  docker-compose.yml  pyproject.toml
demo/: create_virtual_drive.sh  run_demo.sh
src/hdtool/: __init__.py  __main__.py  cli.py  copier.py  errors.py  models.py  precheck.py  scanner.py  selector.py  state.py
tests/: conftest.py  test_copier.py  test_copier_v2.py  test_errors.py  test_fix_timestamps.py  test_integration.py  test_metadata.py  test_precheck.py  test_precheck_v2.py  test_scanner.py  test_selector.py  test_state.py
